add dialog components

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,3 +1,8 @@
 .footer{
     grid-area: footer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #7908AA;
+    color: #fff;
 }
