--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,6 +1,7 @@
 
 .app{
     height: 100vh;
+    width: 95vw;  
     display: grid;
     grid-template-areas: "header header"
     "content sidebar"
